--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gitly": "^2.1.5",
     "node-fetch": "^3.1.1",
     "ora": "^6.0.0",
+    "readline-sync": "^1.4.10",
+    "rimraf": "^5.0.5",
     "simple-git": "^3.20.0",
     "yargs": "^17.7.2"
   }
